--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/card": "^2.0.11",
+    "@nextui-org/react": "^2.0.22",
+    "framer-motion": "^10.16.0",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -17,12 +20,12 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
-    "tailwindcss": "3.3.2",
-    "ts-standard": "^12.0.2",
-    "typescript": "5.1.3",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
-    "postcss": "8.4.24"
+    "postcss": "8.4.24",
+    "tailwindcss": "3.3.2",
+    "ts-standard": "^12.0.2",
+    "typescript": "5.1.3"
   }
 }
