--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,7 @@
 {
-  "extends": "./node_modules/ts-standard/eslintrc.json",
+  "extends": [
+    "next/core-web-vitals"
+  ],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
