--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.4.17",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
@@ -25,7 +26,6 @@
     "eslint-config-next": "13.4.7",
     "postcss": "8.4.24",
     "tailwindcss": "3.3.2",
-    "ts-standard": "^12.0.2",
     "typescript": "5.1.3"
   }
 }
