--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,24 @@
 {
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true
+  },
   "extends": [
-    "next/core-web-vitals"
+    "standard-with-typescript",
+    "plugin:react/recommended"
   ],
   "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module",
     "project": "./tsconfig.json"
   },
+  "plugins": [
+    "react"
+  ],
   "rules": {
-    "@typescript-eslint/no-misused-promises": "off",
-    "@typescript-eslint/restrict-template-expressions": "off",
-    "@typescript-eslint/strict-boolean-expressions": "off"
+    "react/prop-types": "off",
+    "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/no-floating-promises": "off"
   }
 }
