--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,6 +12,7 @@
   "dependencies": {
     "@nextui-org/card": "^2.0.11",
     "@nextui-org/react": "^2.0.22",
+    "@nextui-org/tabs": "^2.0.14",
     "@nextui-org/tooltip": "^2.0.13",
     "framer-motion": "^10.16.0",
     "next": "13.4.7",
@@ -22,9 +24,15 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "eslint-config-standard-with-typescript": "^38.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.33.2",
     "postcss": "8.4.24",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
