--- a/package.json
+++ b/package.json
@@ -1,45 +1,42 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
-  "private": true,
+  "name": "as-portfolio",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "next dev",
-    "dev:turbo": "next dev --turbo",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "@nextui-org/button": "^2.0.16",
-    "@nextui-org/card": "^2.0.11",
-    "@nextui-org/divider": "^2.0.15",
-    "@nextui-org/link": "^2.0.17",
-    "@nextui-org/modal": "^2.0.18",
-    "@nextui-org/react": "^2.0.22",
-    "@nextui-org/scroll-shadow": "^2.1.4",
-    "@nextui-org/tabs": "^2.0.14",
-    "@nextui-org/tooltip": "^2.0.13",
-    "framer-motion": "^10.16.0",
-    "next": "13.4.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@astrojs/react": "^3.0.1",
+    "@astrojs/tailwind": "^5.0.0",
+    "@nextui-org/button": "^2.0.18",
+    "@nextui-org/card": "^2.0.18",
+    "@nextui-org/divider": "^2.0.17",
+    "@nextui-org/link": "^2.0.19",
+    "@nextui-org/modal": "^2.0.20",
+    "@nextui-org/react": "^2.1.10",
+    "@nextui-org/scroll-shadow": "^2.1.6",
+    "@nextui-org/tabs": "^2.0.18",
+    "@nextui-org/tooltip": "^2.0.21",
+    "astro": "^3.0.10",
+    "framer-motion": "^10.16.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^13.4.17",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6",
-    "@typescript-eslint/eslint-plugin": "^6.1.0",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
-    "eslint-config-standard-with-typescript": "^38.0.0",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^39.0.0",
     "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.33.2",
-    "postcss": "8.4.24",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "tailwindcss": "^3.3.3",
+    "typescript": "*"
   }
 }
