--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@nextui-org/scroll-shadow": "^2.1.6",
     "@nextui-org/tabs": "^2.0.18",
     "@nextui-org/tooltip": "^2.0.21",
-    "astro": "^3.0.10",
+    "astro": "latest",
     "atropos": "^2.0.2",
     "framer-motion": "^10.16.4",
     "react": "^18.0.0",
@@ -31,13 +31,13 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "eslint": "^8.0.1",
+    "eslint": "latest",
     "eslint-config-standard-with-typescript": "^39.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.33.2",
-    "tailwindcss": "^3.3.3",
-    "typescript": "*"
+    "tailwindcss": "latest",
+    "typescript": "latest"
   }
 }
