Update dependencies in package.json

--- a/package.json
+++ b/package.json
@@ -10,32 +10,32 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^3.0.1",
-    "@astrojs/tailwind": "^5.0.0",
-    "@nextui-org/button": "^2.0.18",
-    "@nextui-org/card": "^2.0.18",
+    "@astrojs/react": "^3.0.7",
+    "@astrojs/tailwind": "^5.0.3",
+    "@nextui-org/button": "^2.0.26",
+    "@nextui-org/card": "^2.0.24",
     "@nextui-org/divider": "^2.0.17",
-    "@nextui-org/link": "^2.0.19",
-    "@nextui-org/modal": "^2.0.20",
-    "@nextui-org/react": "^2.1.10",
-    "@nextui-org/scroll-shadow": "^2.1.6",
-    "@nextui-org/tabs": "^2.0.18",
-    "@nextui-org/tooltip": "^2.0.21",
-    "astro": "latest",
+    "@nextui-org/link": "^2.0.26",
+    "@nextui-org/modal": "^2.0.28",
+    "@nextui-org/react": "^2.2.9",
+    "@nextui-org/scroll-shadow": "^2.1.12",
+    "@nextui-org/tabs": "^2.0.26",
+    "@nextui-org/tooltip": "^2.0.29",
+    "astro": "4.0.3",
     "atropos": "^2.0.2",
     "framer-motion": "^10.16.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
     "eslint": "latest",
-    "eslint-config-standard-with-typescript": "^39.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
-    "eslint-plugin-promise": "^6.0.0",
+    "eslint-config-standard-with-typescript": "^40.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.3.1",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "tailwindcss": "latest",
     "typescript": "latest"
