--- a/package.json
+++ b/package.json
@@ -1,43 +1,20 @@
 {
-  "name": "as-portfolio",
+  "name": "portfolio",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^3.0.9",
+    "@astrojs/check": "^0.9.2",
     "@astrojs/tailwind": "^5.1.0",
-    "@nextui-org/button": "^2.0.26",
-    "@nextui-org/card": "^2.0.24",
-    "@nextui-org/divider": "^2.0.25",
-    "@nextui-org/link": "^2.0.26",
-    "@nextui-org/modal": "^2.0.28",
-    "@nextui-org/react": "^2.2.9",
-    "@nextui-org/scroll-shadow": "^2.1.12",
-    "@nextui-org/tabs": "^2.0.26",
-    "@nextui-org/tooltip": "^2.0.29",
-    "astro": "4.0.8",
-    "atropos": "^2.0.2",
-    "framer-motion": "^10.16.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "eslint": "latest",
-    "eslint-config-standard-with-typescript": "^43.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.33.2",
-    "tailwindcss": "latest",
-    "typescript": "latest"
+    "astro": "^4.11.4",
+    "hotkeypad": "^0.1.1",
+    "tailwindcss": "^3.4.9",
+    "typescript": "^5.5.4"
   }
 }
