--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "react",
-    "baseUrl": "./",
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "src/*"
@@ -11,12 +11,15 @@
       "@components/*": [
         "src/components/*"
       ],
+      "@ui/*": [
+        "src/components/ui/*"
+      ],
+      "@shared/*": [
+        "src/shared/*"
+      ],
       "@layouts/*": [
         "src/layouts/*"
-      ],
-      "@page-components/*": [
-        "src/components/page/components/*"
-      ],
+      ]
     }
   }
 }
