--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@trpc/client": "^11.0.0",
 		"@trpc/react-query": "^11.0.0",
 		"@trpc/server": "^11.0.0",
+		"babel-plugin-react-compiler": "^19.0.0-beta-aeaed83-20250323",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"framer-motion": "^12.5.0",
