--- a/package.json
+++ b/package.json
@@ -30,17 +30,17 @@
 		"babel-plugin-react-compiler": "^19.0.0-beta-aeaed83-20250323",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"framer-motion": "^12.5.0",
+		"framer-motion": "^12.6.1",
 		"lucide-react": "^0.483.0",
-		"next": "15.2.3",
+		"next": "^15.2.4",
 		"next-mdx-remote": "^5.0.0",
 		"next-themes": "^0.4.6",
-		"nextjs-toploader": "^3.8.15",
+		"nextjs-toploader": "^3.8.16",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
 		"rehype-pretty-code": "^0.14.1",
-		"resend": "^4.1.2",
+		"resend": "^4.2.0",
 		"server-only": "^0.0.1",
 		"sonner": "^2.0.1",
 		"superjson": "^2.2.2",
@@ -51,11 +51,12 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
-		"@tailwindcss/postcss": "^4",
-		"@types/node": "^20",
-		"@types/react": "^19",
-		"@types/react-dom": "^19",
-		"tailwindcss": "^4.0.15",
-		"typescript": "^5"
+		"@tailwindcss/postcss": "^4.0.17",
+		"@types/bun": "^1.2.6",
+		"@types/node": "^20.17.27",
+		"@types/react": "^19.0.12",
+		"@types/react-dom": "^19.0.4",
+		"tailwindcss": "^4.0.17",
+		"typescript": "^5.8.2"
 	}
 }
