--- a/package.json
+++ b/package.json
@@ -23,14 +23,9 @@
 		"@react-email/components": "0.0.34",
 		"@rehype-pretty/transformers": "^0.13.2",
 		"@tailwindcss/typography": "^0.5.16",
-		"@tanstack/react-query": "^5.69.0",
-		"@trpc/client": "^11.0.0",
-		"@trpc/react-query": "^11.0.0",
-		"@trpc/server": "^11.0.0",
 		"babel-plugin-react-compiler": "^19.0.0-beta-aeaed83-20250323",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"framer-motion": "^12.6.1",
 		"lucide-react": "^0.483.0",
 		"next": "^15.2.4",
 		"next-mdx-remote": "^5.0.0",
@@ -57,6 +52,7 @@
 		"@types/react": "^19.0.12",
 		"@types/react-dom": "^19.0.4",
 		"tailwindcss": "^4.0.17",
+		"tailwindcss-motion": "^1.1.0",
 		"typescript": "^5.8.2"
 	}
 }
