--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"rehype-pretty-code": "^0.14.1",
 		"resend": "^4.2.0",
 		"server-only": "^0.0.1",
+		"seti-icons": "^0.0.4",
 		"sonner": "^2.0.1",
 		"superjson": "^2.2.2",
 		"tailwind-merge": "^3.0.2",
