--- a/biome.jsonc
+++ b/biome.jsonc
@@ -28,6 +28,7 @@
 			"enabled": true
 		}
 	},
+	
 	"linter": {
 		"enabled": true,
 		"rules": {
@@ -46,7 +47,8 @@
 				}
 			},
 			"a11y": {
-				"useSemanticElements": "warn"
+				"useSemanticElements": "warn",
+				"noSvgWithoutTitle": "off"
 			},
 			"security": {
 				"noDangerouslySetInnerHtml": "warn"
