--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.2.6",
-    "@astrojs/react": "^4.2.7",
-    "@astrojs/vercel": "^8.1.4",
+    "@astrojs/mdx": "4.3.0",
+    "@astrojs/react": "4.3.0",
+    "@astrojs/vercel": "8.2.2",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-collapsible": "^1.1.10",
     "@radix-ui/react-label": "^2.1.4",
@@ -21,7 +21,7 @@
     "@react-email/components": "^0.0.38",
     "@react-email/tailwind": "^1.0.5",
     "@tailwindcss/vite": "^4.1.3",
-    "astro": "^5.7.10",
+    "astro": "5.11.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.507.0",
