--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -66,6 +66,6 @@
 		"shadcn": "^3.5.0",
 		"tailwindcss": "^4.1.17",
 		"tw-animate-css": "^1.4.0",
-		"typescript": "catalog:"
+		"typescript": "latest"
 	}
 }
