--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	},
 	"devDependencies": {
 		"turbo": "2.6.0",
-		"typescript": "catalog:"
+		"typescript": "latest"
 	},
 	"engines": {
 		"node": ">=18"
@@ -22,12 +22,5 @@
 	"workspaces": [
 		"apps/*",
 		"packages/*"
-	],
-	"catalog": {
-		"typescript": "5.9.3",
-		"zod": "4.0.0",
-		"superjson": "2.2.2",
-		"@types/bun": "1.3.0"
-	},
-	"catalogs": {}
+	]
 }
