--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,9 +1,6 @@
-FROM oven/bun:1.3-alpine AS base
+FROM node:24-alpine AS build
 
 WORKDIR /usr/src/app
-
-
-FROM base AS build
 
 # Install build tools for native modules (better-sqlite3)
 RUN apk add --no-cache python3 make g++
@@ -11,11 +8,16 @@ RUN apk add --no-cache python3 make g++
 COPY package.json .
 COPY . .
 
-# Install production deps (bun handles native deps)
-RUN bun install --production
+# Copy seed database if it exists (will be used later)
+RUN mkdir -p /seed && (cp .tmp/data.db /seed/data.db 2>/dev/null || true)
+
+# update npm to latest
+RUN npm install -g npm@latest
+# Install production deps
+RUN npm install --omit=dev --legacy-peer-deps
 
 # Build Strapi
-RUN bun run build
+RUN npm run build
 
 
 # Use Node.js for runtime (Strapi requires Node.js, not Bun)
@@ -43,8 +45,15 @@ COPY --from=build /usr/src/app/favicon.png ./favicon.ico
 RUN npm rebuild better-sqlite3
 
 # Create directories and assign to node user
-RUN mkdir -p .tmp database/migrations && chown -R node:node .tmp database
+RUN mkdir -p .tmp database/migrations seed && chown -R node:node .tmp database seed
+
+# Copy seed database from build stage (directory always exists, may be empty)
+COPY --from=build --chown=node:node /seed/ seed/
+
+# Copy entrypoint script
+COPY --chown=node:node docker-entrypoint.sh /usr/src/app/
+RUN chmod +x /usr/src/app/docker-entrypoint.sh
 
 USER node
 
-CMD ["node", "--run", "start"]
+CMD ["/usr/src/app/docker-entrypoint.sh"]
