feat: add additional environment variables to globalPassThroughEnv in turbo.json

--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,11 @@
   "ui": "tui",
   "globalPassThroughEnv": [
     "PATH",
-    "NODE_ENV"
+    "NODE_ENV",
+    "NODE_ENV",
+    "RESEND_API_KEY",
+    "STRAPI_URL",
+    "STRAPI_API_TOKEN"
   ],
   "tasks": {
     "build": {
