fix: update Docker image name and adjust Node.js engine version requirements

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -88,9 +88,7 @@ jobs:
           AWS_EFS_FILE_SYSTEM_ID: ${{ secrets.AWS_EFS_FILE_SYSTEM_ID }}
           AWS_EFS_ACCESS_POINT_ID: ${{ secrets.AWS_EFS_ACCESS_POINT_ID }}
           AWS_ALB_TARGET_GROUP_ARN: ${{ secrets.AWS_ALB_TARGET_GROUP_ARN }}
-          DOCKER_IMAGE: ghcr.io/${{ github.repository_owner }}/portfolio-api:${{ github.ref_name }}
+          DOCKER_IMAGE: ghcr.io/imrlopezag/portfolio-api:latest
         run: |
-          # Lowercase the image name (Docker requires lowercase)
-          export DOCKER_IMAGE=$(echo "$DOCKER_IMAGE" | tr '[:upper:]' '[:lower:]')
           chmod +x ./aws/deploy.sh
           ./aws/deploy.sh
