--- a/aws/.env.example
+++ b/aws/.env.example
@@ -8,3 +8,10 @@ AWS_SUBNET_2=subnet-xxxxxxxxx
 AWS_EFS_FILE_SYSTEM_ID=fs-xxxxxxxxx
 AWS_EFS_ACCESS_POINT_ID=fsap-xxxxxxxxx
 AWS_ALB_TARGET_GROUP_ARN=arn:aws:elasticloadbalancing:us-east-1:ACCOUNT_ID:targetgroup/portfolio-api-tg/xxxxxxxxx
+
+# Cloudflare R2 Storage
+R2_ACCESS_KEY_ID=your-r2-access-key-id
+R2_SECRET_ACCESS_KEY=your-r2-secret-access-key
+R2_ENDPOINT=https://your-account-id.r2.cloudflarestorage.com
+R2_BUCKET=your-bucket-name
+R2_PUBLIC_URL=https://bucket.yourdomain.com
