--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.31.2",
     "@strapi/plugin-users-permissions": "5.31.2",
+    "@strapi/provider-upload-aws-s3": "^5.31.2",
     "@strapi/strapi": "5.31.2",
     "better-sqlite3": "11.3.0",
     "react": "^18.0.0",
