--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
 		"date-fns": "^4.1.0",
 		"fumadocs-core": "^16.2.3",
 		"fumadocs-mdx": "^14.1.0",
+		"fumadocs-ui": "^16.2.3",
 		"github-slugger": "^2.0.0",
 		"hast": "^1.0.0",
 		"lucide-react": "^0.556.0",
 		"mdast": "^3.0.0",
 		"mdast-util-from-markdown": "^2.0.2",
 		"mdast-util-to-string": "^4.0.0",
+		"mermaid": "^11.12.2",
 		"motion": "^12.23.25",
 		"next": "16.0.7",
 		"next-themes": "^0.4.6",
