--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean": "git clean -xdf .cache .turbo node_modules .next"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.946.0",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
